--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <div class="top-wrapper">
         <div class="container">
-            <img src="public/附田真帆.jpeg" alt="tukudamahoの顔"　width="500px" height="300px">
+            <img src="public/附田真帆.png" alt="tukudamahoの顔"　width="500px" height="300px">
             <h1>Maho Tsukuda</h1>
             <p>東北学院大学4年、附田真帆（つくだまほ）です。よろしくお願いします！</p>
         </div>
@@ -48,7 +48,7 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="public/9D482CAD-7175-498F-9F74-9DB4DDF689AC.jpg" width="200px" height="200px">
+              <img src="public/9D482CAD-7175-498F-9F74-9DB4DDF689AC.png" width="200px" height="200px">
               <p>Hobby</p>
             </div>
             <p class="txt-contents">お菓子作り、料理、生け花、マラソン、動画・音楽鑑賞など、インドア、アウトドア問わず.
@@ -58,7 +58,7 @@
 
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="public/43EBD798-4FF1-497C-BCFE-57B207753EA6.jpg" width="200px" height="200px">
+              <img src="public/43EBD798-4FF1-497C-BCFE-57B207753EA6.png" width="200px" height="200px">
               <p>My favorite foods</p>
             </div>
             <p class="txt-contents">果物が好きで、特にイチゴが好きです。からあげ、お寿司、ラーメン…。好きなものもたくさんあります！友人とカフェ巡りも好きです！</p>
@@ -66,7 +66,7 @@
 
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="public/42AD77EE-35B3-4E27-9BEC-A1BDB1325B7A.jpg" width="200px" height="200px">
+              <img src="public/42AD77EE-35B3-4E27-9BEC-A1BDB1325B7A.png" width="200px" height="200px">
               <p>My favorite sports</p>
             </div>
             <p class="txt-contents">学生時代にやっていたということあり、バレーボール、ハンドボールが好きです。大学でも球技サークルに所属しています！</p>
